Fix gap when scaling keyboard in viewer

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -257,6 +257,9 @@ html {
 .mt-1 {
   margin-top: 0.25rem;
 }
+.mt-8 {
+  margin-top: 2rem;
+}
 .mb-8 {
   margin-bottom: 2rem;
 }
